Cleaned final version

--- a/Data Science.ipynb
+++ b/Data Science.ipynb
@@ -481,6 +481,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "120d0bdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################################\n",
+    "# Code below this point was not used #\n",
+    "#  in the final project              #\n",
+    "######################################"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "id": "0fc9bb3c",
    "metadata": {},
@@ -679,29 +692,7 @@
    "id": "8e3c740f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "# Community Detection\n",
-    "    print('Louvian, this will take years')\n",
-    "    \n",
-    "    partition = community_louvain.best_partition(graph)\n",
-    "    print(partition)\n",
-    "    \n",
-    "    #communities = girvan_newman(graph)\n",
-    "    #print(tuple(sorted(c) for c in next(communities)))\n",
-    "    print('Done with Louvian.')\n",
-    "    \n",
-    "    plt.figure(3,figsize=(64, 64)) \n",
-    "    pos=nx.spring_layout(graph,center=(6,6))\n",
-    "    cmap = cm.get_cmap('viridis', max(partition.values()) + 1)\n",
-    "    #nx.draw(graph,pos,with_labels=True,edge_color=edge_list.values(), cmap=cmap)\n",
-    "    labels = nx.get_edge_attributes(graph,'weight')\n",
-    "    nx.draw_networkx_nodes(graph, pos, partition.keys(), with_labels=True, cmap=cmap, node_color=list(partition.values()))\n",
-    "    nx.draw_networkx_edges(graph, pos, alpha=0.5)\n",
-    "    nx.draw_networkx_edge_labels(graph,pos,edge_labels=labels)\n",
-    "    plt.show()\n",
-    "\"\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
